# spiceroute

./: .bash_profile.pysave  .databrickscfg  .gitignore  .gitignore_global  02-Create.py  PROJECT_ROADMAP.md  README.md  Untitled.ipynb  docker-compose.yml  files_to_keep.txt  test_job.json
.adobe/: md5
.android/: analytics.settings
.cursor/: argv.json
.cursor/extensions/: extensions.json
.redhat/: anonymousId
.streamlit/: credentials.toml
TempMonitoring/: Test.bash
docs/: auth-service.md  cart-service.md  catalog-service.md  notification-service.md  order-tracking-notification-services.md  order-tracking-service.md  payments.md  workflow-orchestration.md
grocery-delivery-platform/: README.md  config.py  docker-compose.yml
grocery-delivery-platform/backend/store-service/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
grocery-delivery-platform/backend/store-service/k8s/: deployment.yaml  service.yaml
grocery-delivery-platform/backend/store-service/src/: db.py  main.py  models.py  routes.py  service.py
grocery-delivery-platform/backend/store-service/src/config/: settings.py
grocery-delivery-platform/backend/store-service/src/middleware/: logging.py
grocery-delivery-platform/backend/store-service/src/repositories/: base.py
grocery-delivery-platform/backend/store-service/src/utils/: cache.py  errors.py  logger.py
grocery-delivery-platform/backend/store-service/tests/: test_profile.py
podman-migration/: README.md  elasticsearch-deploy.yaml  elasticsearch-svc.yaml  mongodb-deploy.yaml  mongodb-svc.yaml  podman-compose.yml  pvcs.yaml  pvs.yaml
qdrant_storage/: raft_state.json
spiceroute/: .gitignore  Dockerfile
(+202 files in other folders)
